deployments/k8s/grpcapi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-go-api-deployment
  labels:
    app: grpc-go-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: grpc-go-api
    spec:       
      containers:
      - name: grpc-go-api
        image: asia.gcr.io/PROJECT_ID/grpc-go-api:v1 # replace PROJECT_ID
        ports:
        - containerPort: 50051
