deployments/k8s/playerapi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: player-deployment
  labels:
    app: player-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: player-api
    spec:       
      containers:
      - name: player-api
        image: asia.gcr.io/PROJECT_ID/player-api:v1 # replace PROJECT_ID
        ports:
        - containerPort: 50051
