deployments/k8s/grpcapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-go-api-service
  labels:
    app: grpc-go-api
spec:
  selector:
    name: grpc-go-api
  type: LoadBalancer    
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 50051
