deployments/k8s/inventoryapi-endpoints-service.yaml
# Use this service if you plan to deploy your gRPC service to Cloud Endpoints using ESP
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-api
spec:
  selector:
    name: inventory-api
  type: LoadBalancer    
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 9000
