deployments/k8s/inventoryapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-api
spec:
  selector:
    name: inventory-api
  type: LoadBalancer    
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 50051
