deployments/k8s/playerapi-endpoints-service.yaml
# Use this service if you plan to deploy your gRPC service to Cloud Endpoints using ESP
apiVersion: v1
kind: Service
metadata:
  name: player-service
  labels:
    app: player-api
spec:
  selector:
    name: player-api
  type: LoadBalancer    
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 9000
